refactor- add favicon to webpage

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/ico"
+      href="/src/assets/favicon.ico"
+    />
 
     <!-- fontawsome cdn -->
     <link
