refactor- add manifest file for future offline PWA implamentation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- favicon for tab to display-->
     <link
       rel="icon"
       type="image/ico"
@@ -17,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- google fonts -->
+    <!-- google font styles -->
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -32,7 +33,13 @@
       rel="stylesheet"
     />
 
-    <meta
+    <!-- link manifest file -->
+    <link
+      rel="manifest"
+      href="/manifest.json"
+    />
+
+     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
