feat- update manifest.json file for mobile integrtion

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- favicon for tab to display-->
+
+    <!-- favicons-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="src/assets/apple-touch-icon.png"
+    />
     <link
       rel="icon"
-      type="image/ico"
-      href="/src/assets/favicon.ico"
+      type="image/png"
+      sizes="32x32"
+      href="src/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="src/assets/favicon-16x16.png"
     />
 
     <!-- fontawsome cdn -->
@@ -33,17 +46,23 @@
       rel="stylesheet"
     />
 
+    <!-- theme color- light-->
+      <meta
+        name="theme-color"
+        content="hsl(248, 100%, 68%)"
+      />
+
     <!-- link manifest file -->
     <link
       rel="manifest"
       href="/manifest.json"
     />
 
-     <meta
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Todo List</title>
+    <title>Tasks</title>
   </head>
   <body>
     <div id="root"></div>
