feat- create PWA

--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="src/assets/apple-touch-icon.png"
+      href="./public/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="src/assets/favicon-32x32.png"
+      href="./public/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="src/assets/favicon-16x16.png"
+      href="./public/favicon-16x16.png"
+    />
+    <link
+      rel="mask-icon"
+      href="./public/android-chrome-512x512-square.png"
     />
 
     <!-- fontawsome cdn -->
@@ -47,15 +51,9 @@
     />
 
     <!-- theme color- light-->
-      <meta
-        name="theme-color"
-        content="hsl(248, 100%, 68%)"
-      />
-
-    <!-- link manifest file -->
-    <link
-      rel="manifest"
-      href="/manifest.json"
+    <meta
+      name="theme-color"
+      content="hsl(248, 100%, 68%)"
     />
 
     <meta
