--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./public/apple-touch-icon.png"
+      href="/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/favicon-32x32.png"
+      href="/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./public/favicon-16x16.png"
+      href="/favicon-16x16.png"
     />
     <link
       rel="mask-icon"
-      href="./public/android-chrome-512x512-square.png"
+      href="/android-chrome-512x512-square.png"
     />
 
     <!-- fontawsome cdn -->
